Move zero fill inside table structure. Finalize the beast and inner table before writing unit test